<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sokyrko.sunrisesunsetapp.MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/crosshairs_gps"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/common_google_signin_btn_text_light_focused"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/place_autocomplete_prediction_secondary_text"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise_and_sunset_times_label"
                    android:textColor="@color/cardview_light_background"
                    app:layout_constraintHorizontal_bias="0.107"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/location_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:freezesText="false"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                    android:textColor="@color/place_autocomplete_search_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/divider"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <TextView
                    android:id="@+id/todayLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day_label"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.107"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/todayTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:freezesText="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/todayLabelTextView" />
            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/divider"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/sunriseImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/sunrise_content_description"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/sunrise" />

                <TextView
                    android:id="@+id/sunriseLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise_time_label"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@+id/sunriseImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sunriseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/colorActivatedHighlight"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@+id/sunriseImageView"
                    app:layout_constraintTop_toBottomOf="@+id/sunriseLabelTextView" />

                <TextView
                    android:id="@+id/firstLightLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/first_light_label"
                    app:layout_constraintLeft_toRightOf="@+id/sunriseImageView"
                    app:layout_constraintTop_toBottomOf="@+id/sunriseTextView" />

                <TextView
                    android:id="@+id/firstLightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/sunriseImageView"
                    app:layout_constraintTop_toBottomOf="@+id/firstLightLabelTextView" />
            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/divider"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/sunsetImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/sunset_label"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/sunset" />

                <TextView
                    android:id="@+id/sunsetLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset_time_label"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@+id/sunsetImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sunsetTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/colorActivatedHighlight"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@+id/sunsetImageView"
                    app:layout_constraintTop_toBottomOf="@+id/sunsetLabelTextView" />

                <TextView
                    android:id="@+id/lastLightLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/last_light_label"
                    app:layout_constraintLeft_toRightOf="@+id/sunsetImageView"
                    app:layout_constraintTop_toBottomOf="@+id/sunsetTextView" />

                <TextView
                    android:id="@+id/lastLightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/sunsetImageView"
                    app:layout_constraintTop_toBottomOf="@+id/lastLightLabelTextView" />
            </android.support.constraint.ConstraintLayout>

            <include layout="@layout/divider"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/dayLengthTLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_length_label"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dayLengthTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dayLengthTLabelTextView" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout="@layout/place_autocomplete_fragment" />
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
